[tool.poetry]
name = "lsn-4-17"
version = "0.1.0"
description = ""
authors = ["'VMakhakhei' <'silenthealsqwe@gmail.com'>"]
readme = "README.md"
packages = [{include = "lsn_4_17"}]

[tool.poetry.dependencies]
python = "^3.10"
selene = "2.0.0rc2"
selenium = "4.4.3"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pylint = "^2.17.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
